--- a/src/components/sign_up/Sign_up.css
+++ b/src/components/sign_up/Sign_up.css
@@ -1,149 +1,149 @@
 .sign-up {
-    position: fixed;
-    z-index: 1001;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #00000090;
-    display: grid;
-    place-items: center;
+  position: fixed;
+  z-index: 1001;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000090;
+  display: grid;
+  place-items: center;
 }
 
 .sign-up-container {
-    place-self: center;
-    width: max(23vw, 330px);
-    max-height: 90vh;
-    overflow-y: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    color: #808080;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    padding: 25px 30px;
-    border-radius: 8px;
-    font-size: 14px;
-    animation: fadeIn 0.5s;
+  place-self: center;
+  width: max(23vw, 330px);
+  max-height: 90vh;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  color: #808080;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 25px 30px;
+  border-radius: 8px;
+  font-size: 14px;
+  animation: fadeIn 0.5s;
 }
 
 .sign-up-container::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .sign-up-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
 }
 
 .sign-up-title h2 {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .sign-up-title .icon-closeicon-close {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .sign-up-title .icon-closeicon-close:hover {
-    color: tomato;
+  color: tomato;
 }
 
 .sign-up-title .icon-closeicon-close {
-    color: black;
+  color: black;
 }
 
 .sign-up-input {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .sign-up-input input {
-    width: 100%;
-    outline: none;
-    border: 1px solid #d2d2d2;
-    padding: 10px;
-    border-radius: 4px;
+  width: 100%;
+  outline: none;
+  border: 1px solid #d2d2d2;
+  padding: 10px;
+  border-radius: 4px;
 }
 
 .sign-up-input .sign-up-password {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .sign-up-input input {
-    outline: none;
-    border: 1px solid #d2d2d2;
-    padding: 10px;
-    border-radius: 4px;
+  outline: none;
+  border: 1px solid #d2d2d2;
+  padding: 10px;
+  border-radius: 4px;
 }
 
 .sign-up-container button {
-    border: none;
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    color: white;
-    background-color: tomato;
-    font-size: 15px;
-    cursor: pointer;
+  border: none;
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  color: white;
+  background-color: tomato;
+  font-size: 15px;
+  cursor: pointer;
 }
 
 .sign-up-condition {
-    display: flex;
-    align-items: start;
-    gap: 8px;
-    margin-top: -15px;
+  display: flex;
+  align-items: start;
+  gap: 8px;
+  margin-top: -15px;
 }
 
 .sign-up-condition input {
-    margin-top: 5px;
-}
-
-.part-end-sign-up {
-    margin-top: -25px;
+  margin-top: 5px;
 }
 
 .part-end-sign-up p span {
-    color: tomato;
-    font-weight: 500;
-    cursor: pointer;
+  color: tomato;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .info-register {
-    margin-top: -25px;
+  margin-top: -25px;
+}
+
+.info-register p {
+  font-weight: 600;
 }
 
 .sign-up-password input {
-    width: 100%;
-    padding-right: 2.5rem;
-  }
+  width: 100%;
+  padding-right: 2.5rem;
+}
 
 .sign-up_ic_eye {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    color: #666;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #666;
 }
 
 .sign-up-input .sign-up-password .sign-up_ic_eye {
-    position: absolute;
+  position: absolute;
 }
 
 .sign-up-input input:focus {
-    border: 1px solid tomato;
+  border: 1px solid tomato;
 }
 
-.part-end-sign-up p span:hover{
-    color: rgb(255, 148, 129);
+.part-end-sign-up p span:hover {
+  color: rgb(255, 148, 129);
 }
 
-.info-register button:hover{
-    background-color: rgb(255, 148, 129);
+.info-register button:hover {
+  background-color: rgb(255, 148, 129);
 }
