--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -1,164 +1,168 @@
 .image-menu {
-    width: 100%;
-    height: 165px;
+  width: 100%;
+  height: 165px;
+  justify-items: center;
+
 }
 
 .image-menu-contents {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .image-menu-contents img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .food-page-container {
-    display: flex;
-    max-width: 1200px;
-    margin: auto;
+  display: flex;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .category-section {
-    max-width: 200px;    
-    height: 100vh;
-    overflow-y: auto;
+  max-width: 200px;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .category-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .category-list li {
-    padding: 8px 7px;
-    cursor: pointer;
-    color: #333;
-    transition: background-color 0.2s ease-in-out;
+  padding: 8px 7px;
+  cursor: pointer;
+  color: #333;
+  transition: background-color 0.2s ease-in-out;
 }
 
 .category-list li:hover {
-    color: tomato;
-    font-weight: bold;
+  color: tomato;
+  font-weight: bold;
 }
 
 .category-list li:active {
-    background-color: tomato;
-    color: white;
+  background-color: tomato;
+  color: white;
 }
 
 .food-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border-left: 2px solid #ddd;
-    padding: 0 20px;
-     margin-bottom: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-left: 2px solid #ddd;
+  padding: 0 20px;
+  margin-bottom: 1000px;
 }
 
 .food-card {
-    /* flex: 1 1 calc(25% - 20px);  */
-    margin: 0;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    overflow: hidden;
-    text-align: center;
-    background-color: #fff;
-    box-sizing: border-box;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  /* flex: 1 1 calc(25% - 20px);  */
+  margin: 0;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  text-align: center;
+  background-color: #fff;
+  box-sizing: border-box;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .food-item-img-container {
-    width: 100%;
-    height: 170px;
-    border-radius: 15px;
-    cursor: pointer;
-  }
+  width: 100%;
+  height: 170px;
+  border-radius: 15px;
+  cursor: pointer;
+}
 
-  .food-item-img-container .food-item-image {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    border-radius: 20px;
-    object-fit: fill;
-    transition: 0.6s;
-    display: block;
-  }
+.food-item-img-container .food-item-image {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  border-radius: 20px;
+  object-fit: fill;
+  transition: 0.6s;
+  display: block;
+}
 
-  .food-item-img-container:hover img {
-    transform: scale(1.05);
-  }  
+.food-item-img-container:hover img {
+  transform: scale(1.05);
+}
 
 .food-info {
-    text-align: start;
-    flex-grow: 1;
+  text-align: start;
+  flex-grow: 1;
 }
 
 .food-info .food-name {
-    color: #333;
-    font-size: 15px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    margin-bottom: 10px;
+  color: #333;
+  font-size: 15px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-bottom: 10px;
 }
 
 .food-price-and-quantity {
-    font-size: 12px;
-    margin: 15px 0;
+  font-size: 12px;
+  margin: 15px 0;
 }
 
 .button-food-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
-.bt-add-to-cart, .bt-buy-now {
-    font-size: 10px;
-    color: #888;
-    padding: 5px 12px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
+.bt-add-to-cart,
+.bt-buy-now {
+  font-size: 10px;
+  color: #888;
+  padding: 5px 12px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .bt-add-to-cart {
-    background-color: #4CAF50;
-    color: #fff;
+  background-color: #4caf50;
+  color: #fff;
 }
 
 .bt-buy-now {
-    background-color: tomato ;
-    color: #fff;
+  background-color: tomato;
+  color: #fff;
 }
 
-.bt-add-to-cart:hover, .bt-buy-now:hover {
-    background-color: #333;
-    color: #fff;
+.bt-add-to-cart:hover,
+.bt-buy-now:hover {
+  background-color: #333;
+  color: #fff;
 }
 
 @media (max-width: 376px) {
-    .food-page-container {
-        flex-direction: column;
-    }
+  .food-page-container {
+    flex-direction: column;
+  }
 
-    .category-section {
-        flex: 1;
-        flex-direction: row;
-        overflow-x: auto;
-        white-space: nowrap;
-    }
+  .category-section {
+    flex: 1;
+    flex-direction: row;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
 
-    .category-list li {
-        display: inline-block;
-        margin-right: 10px;
-    }
+  .category-list li {
+    display: inline-block;
+    margin-right: 10px;
+  }
 }
